# Kulyk-goit-PythonWeb-HW-02

./: .gitignore  Dockerfile  cont_runner.py  pyproject.toml
group_project_personal_helper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
personal_helper/: print_table.py
